# rectilinear

./: .gitignore  .worktreeinclude  AGENTS.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  build.rs
.claude/: settings-local.json
crates/rectilinear-core/: Cargo.toml
crates/rectilinear-core/src/: config.rs  ffi.rs  lib.rs
crates/rectilinear-core/src/db/: mod.rs  projects.rs  schema.rs  test_helpers.rs
crates/rectilinear-core/src/embedding/: local.rs  mod.rs
crates/rectilinear-core/src/linear/: mod.rs  projects.rs
crates/rectilinear-core/src/search/: mod.rs
docs/superpowers/plans/: 2026-03-25-multi-workspace.md  2026-04-28-assignees-and-labels.md
docs/superpowers/specs/: 2026-03-25-multi-workspace-design.md  2026-04-28-assignees-and-labels-design.md
src/: config.rs  main.rs
src/cli/: append_cmd.rs  config_cmd.rs  create_cmd.rs  embed_cmd.rs  mark_triaged_cmd.rs  mod.rs  projects_cmd.rs  search_cmd.rs  show_cmd.rs  sync_cmd.rs  teams_cmd.rs  triage_cmd.rs  workspace_cmd.rs
src/db/: mod.rs  schema.rs
src/embedding/: local.rs  mod.rs
src/linear/: mod.rs
src/llm/: mod.rs
src/mcp/: mod.rs
src/search/: mod.rs
