[package]
name = "rectilinear"
version = "0.1.0"
edition = "2021"
description = "Linear issue intelligence tool with hybrid FTS + vector search"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "blob"] }

# HTTP + API
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MCP
rmcp = { version = "0.1", features = ["server", "transport-io"] }

# Config
toml = "0.8"

# Embeddings (local GGUF)
llama-cpp-2 = "0.1"

# Misc
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
colored = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
schemars = "0.8"
