[workspace]
members = ["crates/rectilinear-core"]
resolver = "2"

[package]
name = "rectilinear"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pieter-ouwerkerk/rectilinear"
description = "Linear issue intelligence tool with hybrid FTS + vector search"

[features]
default = []
local-embeddings = ["rectilinear-core/local-embeddings"]

[dependencies]
# Core library
rectilinear-core = { version = "0.1.7", path = "crates/rectilinear-core" }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async
tokio = { version = "1", features = ["full"] }

# Database (re-used from core, but binary needs direct access too)
rusqlite = { version = "0.32", features = ["bundled", "blob"] }

# HTTP + API
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MCP
rmcp = { version = "0.1", features = ["server", "transport-io"] }

# Config
toml = "0.8"

# TUI
ratatui = "0.30"
crossterm = "0.28"
tui-textarea-2 = { version = "0.10", default-features = false, features = ["crossterm_0_28"] }

# Misc
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
colored = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
schemars = "0.8"
rand = "0.10.0"
